# The-Most-Dangerous-Bot

./: .gitignore  Bot.py  CHANGELOG.md  Command_List.py  Location_Data.py  WebServer.py  bot_data.db  bot_kill  bot_restart  bot_start  bot_status  bugs.md  kill_bot  main.py  pyproject.toml  start_bot  the-most-dangerous-bot.service
.github/: copilot-instructions.md
bot/: logger.py  main.py
cogs/: bot_db.py  bot_repl.py  bot_repl_admin.py
defines/: link_text.py  user_session.py
old-stuff/: Bot.py  Location_Data.py  config.py  help_text.py  main.py  on_command.py
repl_helpers/: repl_text.py  runtime.py  support.py  user_session.py
