[tool.poetry]
name = "the-most-dangerous-bot"
version = "0.1.0"
description = ""
authors = ["DarthDemetrius <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.0.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
