[tool.poetry]
name = "the-most-dangerous-bot"
version = "0.1.0"
description = ""
authors = ["DarthDemetrius <<>>"]

[tool.poetry.dependencies]
python = ">=3.14.3"
py-cord = ">=2.7.1"
RestrictedPython = ">=7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
