[tool.poetry]
name = "the-most-dangerous-bot"
version = "0.1.0"
description = ""
authors = ["DarthDemetrius <<>>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
py-cord = ">=2.7.1"
RestrictedPython = ">=7.4"
aiohttp = "<3.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
